[package]
name = "ggez_inputty"
version = "0.1.0"
authors = ["Ratys <alexander.sepity@gmail.com>"]

[lib]
name = "ggez_inputty"
path = "src/lib.rs"

[features]
logging = ["log"]

[dependencies]
ggez = "0.4"
log = { version = "0.4", optional = true }

[dev-dependencies]
chrono = "0.4"
fern = "0.5"
log = "0.4"

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["logging"]